[gd_scene load_steps=7 format=3 uid="uid://djhhbb224jdw6"]

[ext_resource type="Texture2D" uid="uid://cijkhbr5ay641" path="res://img/popup.png" id="1_h2pb8"]
[ext_resource type="FontFile" uid="uid://cj5kipumd5mdm" path="res://fonts/Chicle-Regular.ttf" id="2_f010w"]
[ext_resource type="Script" path="res://level_selection.gd" id="2_h8au1"]
[ext_resource type="Texture2D" uid="uid://d00atl8axer4m" path="res://img/button.png" id="3_02qm6"]

[sub_resource type="LabelSettings" id="LabelSettings_e132s"]
font = ExtResource("2_f010w")
font_size = 125

[sub_resource type="LabelSettings" id="LabelSettings_f03d0"]
font = ExtResource("2_f010w")
font_size = 90

[node name="LevelSelection" type="TextureRect"]
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("1_h2pb8")
script = ExtResource("2_h8au1")

[node name="Title" type="Label" parent="."]
layout_mode = 0
offset_left = 150.0
offset_top = 225.0
offset_right = 1737.0
offset_bottom = 385.0
text = "ELIGE NIVEL"
label_settings = SubResource("LabelSettings_e132s")
horizontal_alignment = 1
vertical_alignment = 1

[node name="LevelsContainer" type="HFlowContainer" parent="."]
layout_mode = 0
offset_left = 150.0
offset_top = 385.0
offset_right = 1737.0
offset_bottom = 916.0
theme_override_constants/h_separation = 50
theme_override_constants/v_separation = 30
alignment = 1

[node name="ButtonsContainer" type="HFlowContainer" parent="."]
layout_mode = 0
offset_left = 150.0
offset_top = 925.0
offset_right = 1737.0
offset_bottom = 1075.0
theme_override_constants/h_separation = 300
alignment = 1

[node name="Button1" type="TextureButton" parent="ButtonsContainer"]
layout_mode = 2
texture_normal = ExtResource("3_02qm6")

[node name="Label" type="Label" parent="ButtonsContainer/Button1"]
layout_mode = 0
offset_right = 462.0
offset_bottom = 150.0
text = "Salir"
label_settings = SubResource("LabelSettings_f03d0")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button2" type="TextureButton" parent="ButtonsContainer"]
layout_mode = 2
texture_normal = ExtResource("3_02qm6")

[node name="Label" type="Label" parent="ButtonsContainer/Button2"]
layout_mode = 0
offset_right = 462.0
offset_bottom = 150.0
text = "Jugar"
label_settings = SubResource("LabelSettings_f03d0")
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="ButtonsContainer/Button1" to="." method="_on_button_1_pressed"]
[connection signal="pressed" from="ButtonsContainer/Button2" to="." method="_on_button_2_pressed"]
